package app.ft.ftapp.android

object TestTags {
    const val MapCreationButton = "MapCreationButton"
    const val PriceTextField = "PriceTextField"
    const val PlacesTextField = "PlacesTextField"
    const val NotesTextField = "NotesTextField"
}