...
        }
    }

    private val _locations = MutableStateFlow(
        listOf(
            AddressesItems(
                name = "Дубки 1 корпус",
                address = "ул. Дениса Давыдова, 1",
                latLng = LatLng(55.660409, 37.228898)
            ),
            AddressesItems(
                name = "Дубки 2 корпус",
                address = "ул. Дениса Давыдова, 3",
                latLng = LatLng(55.659668, 37.228386)
            ),
            AddressesItems(
                name = "Дубки 3 корпус",
                address = "ул. Дениса Давыдова, 9",
                latLng = LatLng(55.659622, 37.226078)
            ),
            AddressesItems(
                name = "Станция Одинцово",
                address = "Привокзальная площадь, 1",
...
