package app.ft.ftapp.android.ui

/**
 * Singleton class for screen constant values detection.
 */
object ScreenValues {
    const val AUTH = "autha"
    const val ANNOUNCE_DETAIL = "announce_detail"
    const val ANNOUNCES_LIST = "announces_list"

    const val CREATION_MAP = "creation_map"
    const val CREATION = "creation"

    const val CHATTING = "chatting"

    const val HOME = "home"
    const val CURRENT = "current"
    const val HISTORY = "history"

    const val MY_ANNOUNCES = "my_announces"
    const val GROUP_CHAT = "chat"

    const val PREVIEW = "preview"

    const val ROOT = "root"
    const val FIRST_PREVIEW = "first_preview"
    const val SECOND_APP = "second_app"
}
